welcome.lessons.welcome.array.island.Island.scala.error
island:1: error: ')' expected but '(' found.
def island(num:Array(Int)): Int = {
                    ^island:1: error: '=' expected but ')' found.
def island(num:Array(Int)): Int = {
                         ^island:4: error: illegal start of simple expression
 }
 ^